# agentic_gui

examples/example_glfw_opengl3/: .gitignore  AGENTS.md  ANALYTICS_ALGORITHMS_SUMMARY.md  BivarAnalysisWidget.cpp  BivarAnalysisWidget.h  CLAUDE.md  COMPILATION_FIXES.md  ESSWindow.cpp  ESSWindow.h  ESSWindow_clean.cpp  FINAL_IMPLEMENTATION_REPORT.md  FSCAWindow.cpp  FSCAWindow.h  FeatureSelectorWidget.cpp  FeatureSelectorWidget.h  HMMMemoryWindow.cpp  HMMMemoryWindow.h  HMMTargetWindow.cpp  HMMTargetWindow.h  HistogramWindow.cpp  HistogramWindow.h  HistogramWindow_Design.md  HistogramWindow_Implementation_Checklist.md  IndicatorBuilderWindow.cpp  IndicatorBuilderWindow.h  LFSWindow.cpp  LFSWindow.h  Makefile  NewsWindow.cpp  NewsWindow.h  OHLCV_IMPLEMENTATION_SUMMARY.md  OHLCV_TRADE_SIMULATION_ARCHITECTURE.md  QuestDbDataFrameGateway.cpp  QuestDbDataFrameGateway.h  QuestDbExports.cpp  QuestDbExports.h  QuestDbImports.cpp  QuestDbImports.h  REFACTORING_STAGE1_DATAFLOW.md  REFACTORING_SUMMARY.md  (+98 more)
examples/example_glfw_opengl3/docs/: Drogon_Backend_Enhancements.md  Drogon_Backend_ImplementationPlan.md  GUI_EXPORT_WORKFLOW.md  ImplementationPlan_SerializationAndPersistence.md  IndicatorBuilder_Plan.md  SerializationPersistence_DatabaseTasks.md  SerializationPersistence_StatusReport.md  Stage1_DatasetBackendTasks.md  Stage1_RunDetail_Backlog.md  TODO_backend_stage1.md  TRADING_SIMULATION_MANUAL.md
examples/example_glfw_opengl3/fsca/: FscaAnalyzer.cpp  FscaAnalyzer.h
examples/example_glfw_opengl3/hmm/: HmmGpu.cu  HmmGpu.h  HmmMemoryTest.cpp  HmmMemoryTest.h  HmmModel.cpp  HmmModel.h  HmmTargetCorrelation.cpp  HmmTargetCorrelation.h
examples/example_glfw_opengl3/lfs/: classes.h  const.h  data_matrix.h  funcdefs.h  lfs.cpp  lfs_beta.cpp  lfs_cuda.cu  lfs_cuda.h  lfs_data_reader.cpp  lfs_data_reader.h  lfs_do_case.cpp  lfs_globals.cpp  lfs_old.h  lfs_weights.cpp  part.cpp  qsortd.cpp  rand32.cpp  simplex.cpp  simplex_legacy.cpp
examples/example_glfw_opengl3/modern_indicators/: ACCURATE_IMPLEMENTATION_STATUS.md  ADX_DUAL_METHOD.md  ARCHITECTURE.md  BATCH_API_README.md  CMMA_DUAL_VERSION.md  CMakeLists.txt  FINAL_VOLUME_INDICATORS_REPORT.md  HIT_OR_MISS_FINAL_STATUS.md  INCREMENTAL_ARCHITECTURE_PLAN.md  INCREMENTAL_USAGE_EXAMPLE.cpp  SOURCE_CODE_MYSTERY.md  VOLUME_MOMENTUM_DISCREPANCY_ANALYSIS.md  VOLUME_MOMENTUM_DUAL_MODE.md  cmma_data.csv  example_config.txt  plot_cmma.py  questions_for_author.md
examples/example_glfw_opengl3/modern_indicators/include/: IncrementalComputer.hpp  IndicatorConfig.hpp  IndicatorEngine.hpp  IndicatorId.hpp  IndicatorRequest.hpp  IndicatorResult.hpp  IndicatorState.hpp  MathUtils.hpp  MultiIndicatorLibrary.hpp  Series.hpp  SingleIndicatorLibrary.hpp  TaskExecutor.hpp
examples/example_glfw_opengl3/modern_indicators/include/helpers/: Fti.hpp  InformationTheory.hpp  Janus.hpp  WaveletHelpers.hpp
examples/example_glfw_opengl3/modern_indicators/include/validation/: DataParsers.hpp
examples/example_glfw_opengl3/modern_indicators/src/: IndicatorConfig.cpp  IndicatorEngine.cpp  IndicatorId.cpp  MathUtils.cpp  MultiIndicatorLibrary.cpp  SingleIndicatorLibrary.cpp  TaskExecutor.cpp
examples/example_glfw_opengl3/modern_indicators/src/helpers/: Fti.cpp  InformationTheory.cpp  Janus.cpp  WaveletHelpers.cpp
examples/example_glfw_opengl3/modern_indicators/src/validation/: DataParsers.cpp
examples/example_glfw_opengl3/modern_indicators/tools/: check_adx_scaling.cpp  check_bar_100.cpp  check_zeros.cpp  compute_indicators.cpp  diagnose_adx.cpp  diagnose_adx_detail.cpp  diagnose_cmma_detail.cpp  diagnose_cmma_zscore.cpp  diagnose_compression.cpp  diagnose_fti10.cpp  diagnose_fti_params.cpp  diagnose_single_bar.cpp  diagnose_trend.cpp  diagnose_trend_detailed.cpp  diagnose_volume_momentum.cpp  diagnose_wavelet_raw.cpp  export_cmma_indicators.cpp  export_computed_indicators.cpp  export_hit_or_miss.cpp  final_cmma_diagnostic.cpp  find_all_trend_params.cpp  find_correct_params.cpp  find_divergence.cpp  find_fti_transform.cpp  find_wavelet_compression.cpp  plot_hit_or_miss.py  replicate_tssb_trend.cpp  test_adx.cpp  test_adx_both_methods.cpp  test_adx_exact_tssb.cpp  test_adx_variations.cpp  test_all_adx_variants.cpp  test_all_cmma_variants.cpp  test_all_formulas.cpp  test_all_implemented.cpp  test_all_trend.cpp  test_aroon.cpp  test_bollinger_cmma.cpp  test_c_values.cpp  test_cmma_both_versions.cpp  (+53 more)
examples/example_glfw_opengl3/scripts/: export_dataset_to_questdb.py
examples/example_glfw_opengl3/simulation/: BUILD_INTEGRATION.md  ISimulationModel_OLD.h.backup  ISimulationModel_v2.h  InitializeModels.cpp  MIGRATION_GUIDE.md  MIGRATION_ROADMAP.md  Makefile.include  ModelFactory.cpp  PERFORMANCE_OPTIMIZATIONS.md  PerformanceMetrics.cpp  PerformanceMetrics.h  PerformanceStressTests.cpp  PerformanceStressTests.h  README.md  RefactoredSimulationWindow.h  SimulationEngine.cpp  SimulationEngine.cpp.backup_before_schedule  SimulationEngine.h  SimulationEngine.h.backup_before_schedule  SimulationTypes.cpp  SimulationTypes.h  SimulationUtils.cpp  SimulationUtils.h  SimulationWindowNew.cpp  SimulationWindowNew.h  TestModelWindow.cpp  TestModelWindow.cpp.bad  TestModelWindow.h  TestModelWindow.h.bad  TestModelWindow_OLD.cpp  ThresholdCalculator.cpp  ThresholdCalculator.h  UNIVERSAL_ARCHITECTURE.md  USAGE_EXAMPLE.cpp  XGBoostConfig.h
examples/example_glfw_opengl3/stationarity/: MeanBreakTest.cpp  MeanBreakTest.h
examples/example_glfw_opengl3/stepwise/: cross_validator.cpp  cross_validator.h  data_matrix.cpp  data_matrix.h  enhanced_stepwise.cpp  enhanced_stepwise.h  enhanced_stepwise_selector.cpp  enhanced_stepwise_selector.h  enhanced_stepwise_selector_v2.cpp  enhanced_stepwise_selector_v2.h  enhanced_stepwise_v2.cpp  enhanced_stepwise_v2.h  linear_quadratic_model.cpp  linear_quadratic_model.h  linear_quadratic_model_wrapper.cpp  linear_quadratic_model_wrapper.h  memory_pool.cpp  memory_pool.h  model_interface.h  modern_svd.cpp  modern_svd.h  monte_carlo_permutation_test.cpp  monte_carlo_permutation_test.h  stepwise_data_reader.cpp  stepwise_data_reader.h  xgboost_model.h  (+3 more)
(+32 files in other folders)
